[package]
name = "bapesh"
version = "0.1.0"
edition = "2021"

[dependencies]
# bapesh_macros = { path = "./bapesh_macros" }

get_if_addrs = "0.5.2"

# tokio = { version = "1.6.1", features = ["full"] }
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.11"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

chrono = { version = "0.4.41", features = ["serde"] }
ring = "0.17.7" #remove!!!
dotenv = "0.15.0"

sha-1 = "0.8.0"
uuid = { version = "1.6.1", features = ["v4"] }

# hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] } #remove!!
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
anyhow = "1.0.86"
futures = { version = "0.3", default-features = false }

#tls
# tokio-rustls = {version = "0.24"}
# state = "0.6"
# indexmap = "2"
# webpki-roots = "0.22.5"

# rustls = "0.23.26"
# rustls-pemfile = "2.2.0"

sqlx = { version = "0.8", optional = true, features = ["postgres", "json", "chrono", "runtime-tokio-rustls"] }

#telegram
# teloxide = {version = "0.12.2", optional = true}
base64 = "0.22.1"
hmac = {version = "0.12.1", optional = true}
sha2 = {version = "0.10.9", optional = true}
urlencoding = {version = "2.1.3", optional = true}
hex = {version = "0.4.3", optional = true}

rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde-float"], optional = true } 
rust_decimal_macros = "1.40.0"
reqwest = {version = "0.12.5", optional = true} #remove!!!

# strum = "0.27.2"
# strum_macros = "0.27.2"

[features]
default = ["currency"]
telegram = ["hmac", "sha2", "urlencoding", "hex"]
currency = ["rust_decimal", "reqwest"]
# tls = ["tokio-rustls", "rustls", "rustls-pemfile"]
db = ["sqlx"]


